# cpp_projects

./: README.md
ITMOScript_interpreter/lib/: CMakeLists.txt  ast.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  scope_value.cpp  scope_value.h  standard_library.cpp  standard_library.h  token.cpp  token.h
ITMOScript_interpreter/tests/: CMakeLists.txt  function_test.cpp  index_slicing_test.cpp  loop_and_branch_test.cpp
ITMO_Endian/: CMakeLists.txt  README.md
ITMO_Endian/lib/: number.cpp  number.h
ITMO_Endian/tests/: CMakeLists.txt  number_test.cpp
access.log_analysis_utility/: README.md  main.cpp
adapters_library/: CMakeLists.txt  README.md
adapters_library/lib/: CMakeLists.txt  aggregate_by_key.h  dataflow.h  dir.h  filter.h  join.h  open_files.h  processing.h  split.h  split_expected.h  transform.h  write.h
adapters_library/tests/: CMakeLists.txt  aggregate_by_key_ut.cpp  drop_nullopt_ut.cpp  filter_ut.cpp  flow_convertions_ut.cpp  join_ut.cpp  out_ut.cpp  split_expected_ut.cpp  split_ut.cpp  transform_ut.cpp  write_ut.cpp
argument_parser/: CMakeLists.txt  README.md
argument_parser/lib/: ArgParser.cpp  ArgParser.h
argument_parser/tests/: argparser_test.cpp
battleship_console_game/: CMakeLists.txt
battleship_console_game/lib/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  hotizontal_board.cpp  parser.cpp  parser.h  strategy.cpp  strategy.h  vertical_board.cpp
bmp_sandpile_model/: CMakeLists.txt
bmp_sandpile_model/lib/: CMakeLists.txt  bmp.cpp  bmp.h  (+4 more)
console_app_for_travelling_on_routes/: CMakeLists.txt
console_app_for_travelling_on_routes/lib/: CMakeLists.txt  cache_processing.cpp  cache_processing.h  printer.cpp  printer.h  request_processing.cpp  request_processing.h
scheduler/: CMakeLists.txt  README.md
scheduler/tests/: CMakeLists.txt  different_types_ut.cpp  empty_scheduler_ut.cpp  int_ut.cpp  string_ut.cpp
(+21 files in other folders)
